update check and hash password in sign up

--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/websockets": "^10.4.8",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
+    "password-validator": "^5.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
